--- a/SpikaEnterprise/res/layout/activity_create_room.xml
+++ b/SpikaEnterprise/res/layout/activity_create_room.xml
@@ -47,6 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
             android:textColor="@color/white"
             android:padding="10dp"
             android:text="@string/create"
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
             android:textColor="@color/white"
             android:padding="10dp"
             android:text="@string/next"
