--- a/SpikaEnterprise/res/layout/activity_forgot_password.xml
+++ b/SpikaEnterprise/res/layout/activity_forgot_password.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res/com.clover.spika.enterprise.chat.views"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_blue" >
@@ -7,7 +6,7 @@
     <com.clover.spika.enterprise.chat.views.RobotoThinTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/loginLayout"
+        android:layout_above="@+id/forgotLayout"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dp"
@@ -17,7 +16,7 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:id="@+id/loginLayout"
+        android:id="@+id/forgotLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -66,66 +65,10 @@
                 android:background="@color/default_blue" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp" >
-
-            <ImageView
-                android:id="@+id/passwordImg"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:contentDescription="@null"
-                android:src="@drawable/login_key" />
-
-            <com.clover.spika.enterprise.chat.views.RobotoThinEditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/passwordImg"
-                android:layout_alignTop="@+id/passwordImg"
-                android:layout_toRightOf="@+id/passwordImg"
-                android:background="@null"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:singleLine="true" />
-
-            <View
-                android:id="@+id/bottomLinePass"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/passwordImg"
-                android:layout_marginTop="10dp"
-                android:background="@color/default_blue" />
-        </RelativeLayout>
         
-        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView 
-            android:id="@+id/tvForgotPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp"
-            android:paddingStart="30dp"
-            android:paddingEnd="30dp"
-            android:paddingBottom="10dp"
-            android:textSize="16sp"
-            android:textColor="@color/default_blue"
-            android:text="@string/forgot_password"/>
-
-        <com.clover.spika.enterprise.chat.views.RobotoCheckBox
-            android:id="@+id/checkBoxRememberLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/login_remember_me" />
 
         <com.clover.spika.enterprise.chat.views.RobotoThinButton
-            android:id="@+id/loginBtn"
+            android:id="@+id/submitBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -133,9 +76,22 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/selector_green"
             android:gravity="center"
-            android:onClick="onLoginClick"
             android:padding="10dp"
-            android:text="@string/login_big"
+            android:text="@string/submit_changes"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+        
+         <com.clover.spika.enterprise.chat.views.RobotoThinButton
+            android:id="@+id/cancelBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/selector_green"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/cancel_big"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
     </LinearLayout>
