Forgot password feature done

--- a/SpikaEnterprise/res/layout/activity_change_password.xml
+++ b/SpikaEnterprise/res/layout/activity_change_password.xml
@@ -68,7 +68,7 @@
                 android:layout_height="30dp"
                 android:layout_alignParentLeft="true"
                 android:contentDescription="@null"
-                android:src="@drawable/login_avatar" />
+                android:src="@drawable/login_key" />
 
             <com.clover.spika.enterprise.chat.views.RobotoThinEditText
                 android:id="@+id/newPassword"
@@ -79,6 +79,7 @@
                 android:layout_toRightOf="@+id/usernameImg"
                 android:background="@null"
                 android:hint="@string/new_password"
+                android:inputType="textPassword"
                 android:maxLines="1"
                 android:paddingLeft="5dp"
                 android:singleLine="true" />
