--- a/SpikaEnterprise/res/layout/item_detail_values.xml
+++ b/SpikaEnterprise/res/layout/item_detail_values.xml
@@ -2,38 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
-    
-    <LinearLayout 
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
-	   <com.clover.spika.enterprise.chat.views.RobotoThinEditText 
-	       android:id="@+id/editDetail"
-	       android:layout_width="0dp"
-	       android:layout_height="wrap_content"
-	       android:textColor="@color/default_blue"
-	       android:padding="10dp"
-	       android:textSize="20sp" 
-           android:textStyle="bold"
-	       android:background="@null"
-	       android:layout_weight="2"
-	       />
-	   
-	   <Switch 
-	       android:id="@+id/switchDetailPublic"
-	       android:layout_width="0dp"
-	       android:layout_height="wrap_content"
-	       android:padding="10dp"
-	       android:layout_weight="1"
-	       android:layout_gravity="end"
-	       android:focusable="true"
-	       android:focusableInTouchMode="true"
-	       />
-        
-        
+        android:layout_height="wrap_content" >
+
+        <com.clover.spika.enterprise.chat.views.RobotoThinEditText
+            android:id="@+id/editDetail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:background="@null"
+            android:padding="10dp"
+            android:textColor="@color/default_blue"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Switch
+            android:id="@+id/switchDetailPublic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:padding="10dp" />
     </LinearLayout>
-    
-   
-    
 
 </RelativeLayout>
