--- a/SpikaEnterprise/res/layout/activity_other_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_other_profile.xml
@@ -31,66 +31,75 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/mainHolder"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/actionBarLayout" >
 
-        <com.clover.spika.enterprise.chat.views.RoundImageView
-            android:id="@+id/profileImage"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/circle_with_white_border"
-            tools:src="@drawable/white_circle" />
-
-        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
-            android:id="@+id/profileName"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/profileImage"
-            android:layout_margin="20dp"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="45sp"
-            tools:text="John Doe" />
+            android:layout_height="wrap_content" >
 
-        <FrameLayout
-            android:id="@+id/loadingLayout"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/shape_rounded_trans_black" >
+            <RelativeLayout
+                android:id="@+id/mainHolder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <com.clover.spika.enterprise.chat.views.RoundImageView
+                    android:id="@+id/profileImage"
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/circle_with_white_border"
+                    tools:src="@drawable/white_circle" />
+
+                <com.clover.spika.enterprise.chat.views.RobotoThinTextView
+                    android:id="@+id/profileName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/profileImage"
+                    android:layout_margin="20dp"
+                    android:gravity="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="45sp"
+                    tools:text="John Doe" />
+
+                <FrameLayout
+                    android:id="@+id/loadingLayout"
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/shape_rounded_trans_black" >
+
+                    <ProgressBar
+                        android:id="@+id/loadingPB"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:visibility="visible" />
+                </FrameLayout>
+            </RelativeLayout>
+
+            <com.clover.spika.enterprise.chat.views.DetailsView
+                android:id="@+id/scrollViewDetails"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/mainHolder"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:divider="@android:color/transparent" />
 
             <ProgressBar
-                android:id="@+id/loadingPB"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:visibility="visible" />
-        </FrameLayout>
-    </RelativeLayout>
-
-    <com.clover.spika.enterprise.chat.views.DetailsView
-        android:id="@+id/scrollViewDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/mainHolder"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:divider="@android:color/transparent" />
-
-    <ProgressBar
-        android:id="@+id/progressBarDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp"
-        android:visibility="invisible"
-        tools:visibility="visible" />
+                android:id="@+id/progressBarDetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/mainHolder"
+                android:layout_centerHorizontal="true"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
