--- a/SpikaEnterprise/res/layout/item_detail_values.xml
+++ b/SpikaEnterprise/res/layout/item_detail_values.xml
@@ -7,26 +7,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <com.clover.spika.enterprise.chat.views.RobotoThinEditText
+        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
             android:id="@+id/editDetail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@null"
             android:padding="10dp"
-            android:textColor="@color/default_blue"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="20sp" />
 
-        <Switch
-            android:id="@+id/switchDetailPublic"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_weight="1"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:padding="10dp" />
+            android:layout_gravity="end|center_vertical"
+            android:layout_weight="1" >
+
+            <Switch
+                android:id="@+id/switchDetailPublic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp" />
+
+            <View
+                android:id="@+id/switchSwitcher"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignBottom="@+id/switchDetailPublic"
+                android:layout_alignTop="@+id/switchDetailPublic" />
+        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
