--- a/SpikaEnterprise/res/values/global_app_settings.xml
+++ b/SpikaEnterprise/res/values/global_app_settings.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <!-- when true, application will ask the user if he/she wants to compress the image
-        before sending it -->
+
+    <!--
+         when true, application will ask the user if he/she wants to compress the image
+        before sending it
+    -->
     <bool name="send_compressed_images">true</bool>
 
-    <!-- when enabled, give the user the opportunity to decide if he or she
+    <!--
+         when enabled, give the user the opportunity to decide if he or she
         wants to sent a full sized photo or do a crop of a given photo;
-        by default, user can only send cropped images -->
+        by default, user can only send cropped images
+    -->
     <bool name="enable_full_size_and_crop_image_choice">true</bool>
 
-    <!-- when true, global encryption will be enabled; this means that all data
-        transmitted by this app will be encrypted -->
+    <!--
+         when true, global encryption will be enabled; this means that all data
+        transmitted by this app will be encrypted
+    -->
     <bool name="enable_global_encryption">true</bool>
-    
-    <!-- when true, user can pick categorie;
-    	if it's false, categorie is hidden, value is 0 -->
+
+    <!--
+         when true, user can pick categorie;
+    	if it's false, categorie is hidden, value is 0
+    -->
     <bool name="enable_categories">true</bool>
-    
+
+    <!-- Enable polling in the app -->
+    <bool name="enable_polling">false</bool>
+
 </resources>
