--- a/SpikaEnterprise/res/layout/activity_camera_crop.xml
+++ b/SpikaEnterprise/res/layout/activity_camera_crop.xml
@@ -17,52 +17,13 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <RelativeLayout
+    <com.clover.spika.enterprise.chat.views.cropper.CropImageView
+        xmlns:custom="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/CropImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_below="@+id/topText"
-        android:layout_centerHorizontal="true" >
-
-        <com.clover.spika.enterprise.chat.views.CroppedImageView
-            android:id="@+id/ivCameraCropPhoto"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:scaleType="matrix" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="#00000000"
-            android:orientation="vertical" >
-
-            <View
-                android:id="@+id/topView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#00000000" />
-
-            <LinearLayout
-                android:id="@+id/llCropFrame"
-                android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:background="@drawable/crop_mask"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal" >
-            </LinearLayout>
-
-            <View
-                android:id="@+id/bottomView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#00000000" />
-        </LinearLayout>
-    </RelativeLayout>
+        android:layout_centerInParent="true"
+        android:layout_gravity="center" />
 
     <LinearLayout
         android:id="@+id/footerLayout"
