--- a/SpikaEnterprise/res/values/attrs.xml
+++ b/SpikaEnterprise/res/values/attrs.xml
@@ -85,5 +85,18 @@
 	    <attr name="oval" format="boolean" />
 	    <attr name="android:scaleType" />
   	</declare-styleable>
+  	
+    <declare-styleable name="CropImageView">
+        <attr name="guidelines">
+            <enum name="on" value="2"/>
+            <enum name="onTouch" value="1"/>
+            <enum name="off" value="0"/>
+        </attr>
+        <attr name="fixAspectRatio" format="boolean"/>
+        <attr name="aspectRatioX" format="integer"/>
+        <attr name="aspectRatioY" format= "integer"/>
+        <attr name="imageResource" format="reference"/>
+    </declare-styleable>
+
     
 </resources>
