--- a/SpikaEnterprise/res/layout/item_invite_person.xml
+++ b/SpikaEnterprise/res/layout/item_invite_person.xml
@@ -44,7 +44,7 @@
             android:layout_toRightOf="@+id/imageLayout"
             android:orientation="vertical" >
 
-            <TextView
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                 android:id="@+id/personName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -54,6 +54,19 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                tools:text="pero" />
+            
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                android:id="@+id/personType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:text="group"
                 tools:text="pero" />
         </LinearLayout>
 
