--- a/SpikaEnterprise/res/values/global_app_settings.xml
+++ b/SpikaEnterprise/res/values/global_app_settings.xml
@@ -28,5 +28,8 @@
 
     <!-- Enable polling in the app -->
     <bool name="enable_polling">false</bool>
+    
+    <!-- Enable first user profile than chat -->
+    <bool name="first_user_profile">false</bool>
 
 </resources>
