--- a/SpikaEnterprise/res/layout/activity_other_profile.xml
+++ b/SpikaEnterprise/res/layout/activity_other_profile.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentLeft="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
-            android:padding="20dp"
+            android:padding="10dp"
             android:src="@drawable/btn_back" />
 
         <com.clover.spika.enterprise.chat.views.RobotoThinTextView
@@ -29,6 +29,18 @@
             android:text="@string/profile"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
+        
+        <ImageButton
+            android:id="@+id/openChat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:src="@drawable/social_chat"
+            android:visibility="gone" />
+        
     </RelativeLayout>
 
     <ScrollView
