--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/no_items"
+            android:text="@string/no_messages"
             android:textColor="@color/default_blue"
             android:textSize="30sp"
             android:visibility="gone" />
