--- a/SpikaEnterprise/res/layout/fragment_create_room.xml
+++ b/SpikaEnterprise/res/layout/fragment_create_room.xml
@@ -153,7 +153,9 @@
         android:id="@+id/noItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp"
         android:text="@string/no_items"
         android:textColor="@color/default_blue"
         android:textSize="30sp"
