edittext multiline bug fix

--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -118,8 +118,8 @@
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/footerMore"
                 android:background="@drawable/chat_mask"
-                android:imeOptions="actionDone"
-                android:inputType="textMultiLine"
+                android:imeOptions="actionSend"
+                android:inputType="textCapSentences"
                 android:padding="5dp"
                 android:singleLine="false"
                 android:maxLines="3" 
